# Projetinho_SO

./: CMakeCache.txt  CMakeLists.txt  GatuOS  Makefile  README.md  cmake_install.cmake  falta.txt  main.c
ES/: imprimir.c  imprimir.h
Interface/: interface.c  interface.h  interface_antiga.c
disco/: disco.c  disco.h
escalonador/: rr.c  rr.h
memoria/: memoria.c  memoria.h
processo/: process.c  processo.h  processo.txt  processo1.txt  processo2.txt  processo3.txt
semaforo/: semaforo.c  semaforo.h
